# tauri

./: .gitmodules
bindings/rust/proton-sys/: lib.rs
bindings/rust/src/: lib.rs
cli/tauri-bundler/: Cargo.toml
cli/tauri.js/: package.json
tauri-utils/: Cargo.toml
tauri-utils/src/: lib.rs  webview_trait.rs
templates/rust/src/: main.rs
ui/: proton.h
