[package]
name = "tauri-utils"
version = "0.5.1"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@quasar.dev>", "Daniel Thompson-Yvetot <denjell@sfosc.org>", "Tensor Programming <tensordeveloper@gmail.com>"]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Utilities for Tauri"
edition = "2018"


[dependencies]
error-chain = "0.12.1"
raw-window-handle = "0.3.3"
sysinfo = "0.10"
